--- a/src/routes/styles.scss
+++ b/src/routes/styles.scss
@@ -1,8 +1,13 @@
 :root {
-    background-color: rgb(35, 35, 36);
+    background-color: rgb(36, 36, 36);
     color: white;
 }
 
 body {
     margin: 0;
+}
+
+a {
+    color: white;
+    text-decoration: none;
 }
